k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workmind-web
  labels:
    app.kubernetes.io/name: workmind-web
    app.kubernetes.io/instance: workmind-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: workmind-web
      app.kubernetes.io/instance: workmind-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: workmind-web
        app.kubernetes.io/instance: workmind-web
    spec:
      imagePullSecrets:
        - name: dockersecret      
      serviceAccountName: workmind-web
      securityContext:
        {}
      containers:
        - name: web
          securityContext:
            {}
          image: "workmindproject/wmo-web:latest"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP  
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: http
            periodSeconds: 10        
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
