k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workmind-web
  labels:
    app.kubernetes.io/name: workmind-web
    app.kubernetes.io/instance: workmind-web
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/ttl: 5m
    kubernetes.io/ingress.class: nginx
spec:
  # tls:
  #   - hosts:
  #       - "productive.workmind.app"
  #     secretName: workmind-web-tls
  rules:
    - host: "productive.workmind.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workmind-web
                port:
                  number: 8080
